--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Bootcamp DNC</title>
 </head>
 <body>
+    <nav id="principal"> <!--menu de navegação-->
+        <div id="menu">
+            <a href="">Home</a>
+            <a href="">Ultimas edições</a>
+            <a href="">Requisitos para Participar</a>
+        </div>
+        <button>login</button>
+    </nav>
     
 </body>
 </html>
